Incorporate review feedback No.1
Signed-off-by: Fabian Wolter <github@fabian-wolter.de>